--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">LinkUp</string>
     <string name="instademo">LinkUp</string>
+    <string name="default_web_client_id">com.example.instademo</string>
 
     <!-- string for showing the text "Forgot your login details-->
     <string name="forgot"><font color='c4c4c4'>Forgot your login details? </font><b>Get help logging in.</b></string>
