--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="unknown_user">No name</string>
     <string name="follow">Follow</string>
     <string name="HomeActivity">LinkUp</string>
+
+    <string name="home_activity_label">Home</string>
     <string name="About_me">Hello! I\'m Aadarsh Chaurasia, a fourth-year B.Tech student specializing in Computer Science and Engineering at JSS Academy of Technical Education, NOIDA. I have a passion for Android development and have worked on several projects utilizing Kotlin, XML, and various development tools. </string>
 </resources>
